testsuite/tests/grammar/invalid_lkt/two_grammars.lkt
grammar FooGrammar1 {}
grammar FooGrammar2 {}
